CHANGELOG

== May 26, 2012
* Removed Recent comments from sidebar
* Most Read items descreased from 90 to 15 days
* Added Most Commented items in last 30 days
* Added Popular Authors (sorted my most items)
* Whole Sidebar is cached for 10 minutes
* Added default image for users without image
* Added Facebook Connect for new user registration
* Use facebook image if user does not upload image

== May 23, 2012
* Process sitemap job after creation
* Sitemap process time set for 3 minutes after published
* Email Notification to admins on User registration

== May 20, 2012
* Added 'edit' button for item on front end
* Added 'new item' for user menu on front end
* Updated Gems
* Git push hook Email API

== May 19, 2012
* Fixed Users/Admins Avatar bug
* Allow Users to upload GPG keys
* Fixed Comment notification
* Fixed Forms for Twitter-Bootstrap 2.0.7
* Unified Sidebar
* ActiveAdmin fetched upstream master (4.0.4)
* Added extra admin Links in User menu
* Updated Gems

== May 16, 2012
* Added sitemaps
* Automatic generation of sitemaps in Resque
* Improved Sitemap for news
* Fixed SOLR Resque delete from index 

== May 14, 2012
* Added time left in words for future items (in red color)
* Changed Favicon
* GPLv3 License
* Version 1.0.1
* Better sidebar with horizontal divider
* Remember Selected Category on the Sidebar

== May 13, 2012
* Fixed font size and color for Blockquote
* Made Logo a link to home page
* Decreased box-shadows for a more suttle feeling
* Bigger font on top-navbar
* Removed google-plus dynamic share tracking
* Improved Login modal box
* using LetterOpener for better testing emails
* Added "Submitted by: Author Name" to article emails
* Comment body is set to required(html5)
* Proper Email validation
* Recent Comments added to sidebar
* Top Items in last 90 days added to sidebar
* Asking user registration reason on register page
* minor bug fixes
* more test coverage with Rspec
* Updated TinyMCE
* Updated gems
* Releasing First Version 1.0.0