@@ -6,13 +6,7 @@
           html: { method: :put, class: 'form-horizontal' }
         ) do |f|
     %>
-      <% flash.each do |name, msg| %>
-        <%= content_tag :div, msg, class: "alert alert-#{name}" %>
-      <% end %>
-
       <%= custom_devise_error_messages! %>
-    
-
       <fieldset class="withBorder">
         <legend>Personal Information</legend>
         <div class="control-group">
