@@ -1,41 +1,0 @@
-<!DOCTYPE html>
-<html lang="en" <%= yield(:html_tag) %>>
-  <head>
-    <%= render partial: "/shared/head" %>
-    <%= stylesheet_link_tag "application" %>
-    <%= yield(:stylesheets) %>
-    <%= javascript_include_tag "application" %>
-    <%= yield(:javascripts) %>
-    <%= csrf_meta_tags %>
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <%= yield(:head) %>
-    <%= render partial: "/shared/ga" %>
-  </head>
-  
-  <body>
-    <%= render partial: "/shared/navbar" %>
-
-    <div class="container-fluid">
-      <%= render partial: "/shared/sidebar" %>
-      <div class="content">
-        <% if @show_breadcrumb %>
-          <ul class="breadcrumb">
-            <%= yield :breadcrumb %>
-          </ul>
-        <% end %>
-        <%= yield %>
-        <%= render partial: "/shared/footer" %>
-      </div>
-    </div>
-    <% unless current_user or current_admin_user %>
-      <%= render partial: "/shared/login_modal" %>
-    <% end %>
-    
-    <%= yield(:footer) %>
-    <%= yield(:scripts) %>
-    <%= render partial: "/shared/ga_member" %>
-  </body>
-</html>
